--- a/mirage/index.html
+++ b/mirage/index.html
@@ -35,7 +35,9 @@
                         </label><input onchange="generatePreview()" value=2 type="number"
                                 title="Number of times to display the phrase" class="count-input config"></input><label class="phrase-config" for="alpha-input">Opacity
                         </label><input onchange="generatePreview()" value=128 type="number"
-                                title="Opacity of this phrase" class="alpha-input config"></input>
+                                title="Opacity of this phrase" class="alpha-input config"></input><label class="phrase-config" for="spread-input">Spread
+                        </label><input onchange="generatePreview()" checked="true" type="checkbox"
+                                title="Whether to randomly spread this phrase" class="spread-input config"></input>
                     </div>
                 </div>
                 <div class="util-container">
