--- a/impact/index.html
+++ b/impact/index.html
@@ -67,7 +67,7 @@
                     <label class="config-label" for="config-impact-opacity">Impact opacity</label>
                     <input onchange="readParameters(4)" type="number" value="40"
                             title="Impact text opacity (0 to 255)"
-                            class="config" step=1 min=0 id="config-impact-opacity"></input>
+                            class="config" step=1 min=0 max=255 id="config-impact-opacity"></input>
                     <button onClick="revertConfig(4)">default</button>
                 </div>
                 <div>
