--- a/parallel/index.html
+++ b/parallel/index.html
@@ -43,14 +43,14 @@
                     <label class="config-label" for="config-top-size">Top text size</label>
                     <input onchange="readParameters(0)" type="number" value="10"
                             title="Top line text size"
-                            class="config" step=1 id="config-top-size"></input>
+                            class="config" step=1 min=0 id="config-top-size"></input>
                     <button onClick="revertConfig(0)">default</button>
                 </div>
                 <div>
                     <label class="config-label" for="config-bottom-size">Bottom text size</label>
                     <input onchange="readParameters(1)" type="number" value="10"
                             title="Bottom line text size"
-                            class="config" step=1 id="config-bottom-size"></input>
+                            class="config" step=1 min=0 id="config-bottom-size"></input>
                     <button onClick="revertConfig(1)">default</button>
                 </div>
                 <div>
