--- a/shadow/index.html
+++ b/shadow/index.html
@@ -41,7 +41,7 @@
                 <div>
                     <label class="config-label" for="config-text-size">Text size</label>
                     <input onchange="readParameters(0)" type="number" value="10" title="Text size"
-                            class="config" step=1 id="config-text-size"></input>
+                            class="config" step=1 min=0 id="config-text-size"></input>
                     <button onClick="revertConfig(0)">default</button>
                 </div>
                 <div>
