--- a/mirage/index.html
+++ b/mirage/index.html
@@ -37,7 +37,7 @@
                         </label><input onchange="generatePreview()" value=128 min=0 max=255 type="number"
                                 title="Phrase opacity (0 to 255)" class="alpha-input config"></input><label class="phrase-config" for="spread-input">Spread
                         </label><input onchange="generatePreview()" checked="true" type="checkbox"
-                                title="Whether to randomly spread this phrase" class="spread-input config"></input>
+                                title="Whether to randomly spread this phrase" class="spread-input"></input>
                     </div>
                 </div>
                 <div class="util-container">
