--- a/mirage/index.html
+++ b/mirage/index.html
@@ -28,17 +28,7 @@
                 The second textbox specifies how many times the given text should appear in the mirage.<br>
                 The third textbox specifies the opacity of the given text (0 to 255).<br>
                 <div id="source-container">
-                    <div class="phrase">
-                        <textarea onchange="generatePreview()" cols=80
-                                title="Lyric phrase to display" class="phrase-input"></textarea>
-                        <br><label class="phrase-config" for="count-input">Count
-                        </label><input onchange="generatePreview()" value=2 min=0 type="number"
-                                title="Number of times to display the phrase" class="count-input config"></input><label class="phrase-config" for="alpha-input">Opacity
-                        </label><input onchange="generatePreview()" value=128 min=0 max=255 type="number"
-                                title="Phrase opacity (0 to 255)" class="alpha-input config"></input><label class="phrase-config" for="spread-input">Spread
-                        </label><input onchange="generatePreview()" checked="true" type="checkbox"
-                                title="Whether to randomly spread this phrase" class="spread-input"></input>
-                    </div>
+                    <!-- This section generated at runtime -->
                 </div>
                 <div class="util-container">
                     <button onclick="addSourceContainer()"
