--- a/furigana/index.html
+++ b/furigana/index.html
@@ -27,11 +27,11 @@
                         title="Kana input field"></textarea>
             </div>
             <div>
-                Romaji or furigana goes here. Check for accuracy, pacing, etc.<br>
-                Most normal lyric format applies: spaces between each syllable,<br>
+                Next, input Romaji or furigana. Check for accuracy, pacing, etc.<br>
+                Most normal lyric formatting applies: spaces between each syllable,<br>
                 hyphens to connect syllables. <b>\n will not create a newline</b><br>
                 <br>
-                An asterisk on its own will be treated as no pronunciation<br>
+                An isolated asterisk will be treated as filler with no pronunciation<br>
                 Asterisks <b>can</b> be used with hypens<br>
                 <br>
                 <textarea onchange="readParameters(-1)" id="input-romaji" rows=2 cols=80
@@ -87,14 +87,14 @@
                     <button onClick="revertConfig(1)">default</button>
                 </div>
                 <div>
-                    <label class="config-label" for="config-romaji-size">Pronunce size</label>
+                    <label class="config-label" for="config-romaji-size">Pronounce size</label>
                     <input onchange="readParameters(2)" type="number" value="8"
                     title="Font size of the pronunciation line"
                             class="config" step=1 min=0 id="config-romaji-size"></input>
                     <button onClick="revertConfig(2)">default</button>
                 </div>
                 <div>
-                    <label class="config-label" for="config-romaji-height">Pronunce height</label>
+                    <label class="config-label" for="config-romaji-height">Pronounce height</label>
                     <input onchange="readParameters(3)" type="number" value="15"
                     title="Vertical space between the kana and pronunciation lines"
                             class="config" step=1 id="config-romaji-height"></input>
